--- a/mariusz/app/static/style.css
+++ b/mariusz/app/static/style.css
@@ -1,36 +1,174 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
-
 * {
-    font-family: "Quicksand";
-    color: #333;
+	font-family: "Quicksand";
+	color: #333;
 }
 
-html { background: #eee; padding: 1rem; padding-left:5em}
-body { max-width: 960px; margin: 0 auto; background: white; }
-h1 { color: #377ba8; margin: 1rem 0; }
-a { color: #377ba8; padding-left:5em }
-table, th, td { border: 1px solid black; border-collapse: collapse; }
-th, td { padding: 5px; text-align: left; }
-td, th { border: 1px solid #dddddd; text-align: left; padding: 8px;}
-hr { border: none; border-top: 1px solid lightgray; }
-nav { background: lightgray; display: flex; align-items: center; padding: 0 0.5rem; }
-nav h1 { flex: auto; margin: 0; }
-nav h1 a { text-decoration: none; padding: 0.25rem 0.5rem; }
-nav ul  { display: flex; list-style: none; margin: 0; padding: 0; }
-nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
-.content { padding: 0 1rem 1rem; }
-.content > header { border-bottom: 1px solid lightgray; display: flex; align-items: flex-end; }
-.content > header h1 { flex: auto; margin: 1rem 0 0.25rem 0; }
-.flash { margin: 1em 0; padding: 1em; background: #cae6f6; border: 1px solid #377ba8; }
-.post > header { display: flex; align-items: flex-end; font-size: 0.85em; }
-.post > header > div:first-of-type { flex: auto; }
-.post > header h1 { font-size: 1.5em; margin-bottom: 0; }
-.post .about { color: slategray; font-style: italic; }
-.post .body { white-space: pre-line; }
-.content:last-child { margin-bottom: 0; }
-.content form { margin: 1em 0; display: flex; flex-direction: column; }
-.content label { font-weight: bold; margin-bottom: 0.5em; }
-.content input, .content textarea { margin-bottom: 1em; }
-.content textarea { min-height: 12em; resize: vertical; }
-input.danger { color: #cc2f2e; }
-input[type=submit] { align-self: start; min-width: 10em; }
+html {
+	background: #eee;
+	padding: 1rem;
+	padding-left: 5em
+}
+
+body {
+	max-width: 960px;
+	margin: 0 auto;
+	background: white;
+}
+
+h1 {
+	color: black;
+	margin: 1rem 0;
+	padding: 0.7rem 0;
+}
+
+.cont {
+	color: black;
+    border: 0.05rem solid black;
+    border-radius: 0.5rem;
+    margin-right: 0.25rem;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.cont:hover {
+    cursor: pointer;
+    background-color: white;
+}
+
+table,
+th,
+td {
+	border: 1px solid black;
+	border-collapse: collapse;
+}
+
+th,
+td {
+	padding: 5px;
+	text-align: left;
+}
+
+td,
+th {
+	border: 1px solid #cccccc;
+	text-align: left;
+	padding: 8px;
+}
+
+hr {
+	border: none;
+	border-top: 1px solid lightgray;
+}
+
+nav {
+	background: rgb(255, 169, 169);
+	display: flex;
+	align-items: center;
+	padding: 0 0.5rem;
+}
+
+nav h1 {
+	flex: auto;
+	margin: 0;
+}
+
+nav h1 a {
+	text-decoration: none;
+	padding: 0.25rem 0.5rem;
+}
+
+nav ul {
+	display: flex;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+nav ul li a,
+nav ul li span,
+header .action {
+	display: block;
+	padding: 0.5rem;
+}
+
+.content {
+	padding: 0 1rem 1rem;
+}
+
+.content>header {
+	border-bottom: 1px solid rgb(248, 182, 97);
+	display: flex;
+	align-items: flex-end;
+}
+
+.content>header h1 {
+	flex: auto;
+	margin: 1rem 0 0.25rem 0;
+}
+
+.flash {
+	margin: 1em 0;
+	padding: 1em;
+	background: #f7ff85;
+	border: 1px solid #775b00;
+}
+
+.post>header {
+	display: flex;
+	align-items: flex-end;
+	font-size: 0.85em;
+}
+
+.post>header>div:first-of-type {
+	flex: auto;
+}
+
+.post>header h1 {
+	font-size: 1.5em;
+	margin-bottom: 0;
+}
+
+.post .about {
+	color: rgb(245, 70, 39);
+	font-style: italic;
+}
+
+.post .body {
+	white-space: pre-line;
+}
+
+.content:last-child {
+	margin-bottom: 0;
+}
+
+.content form {
+	margin: 1em 0;
+	display: flex;
+	flex-direction: column;
+}
+
+.content label {
+	font-weight: bold;
+	margin-bottom: 0.5em;
+}
+
+.content input,
+.content textarea {
+	margin-bottom: 1em;
+}
+
+
+input[type=submit] {
+	align-self: center;
+	min-width: 10em;
+
+}
+
+select {
+    margin: 1rem 0;
+}
+
+label {
+    margin: 0 auto;
+}
